# essay-tensor

./: .gitignore  Cargo.toml  LICENSE
crates/essay-plot/: Cargo.toml
crates/essay-plot-wgpu/: Cargo.toml
crates/essay-plot-wgpu/src/: lib.rs
crates/essay-plot-wgpu/src/wgpu/: bezier.rs  bezier.wgsl  main_loop.rs  mod.rs  render.rs  shader2.wgsl  shape2d.rs  tesselate.rs  text.rs  text.wgsl  text_cache.rs  text_texture.rs  triangle2d.rs  triangle2d.wgsl  vertex.rs  wgpu.rs
crates/essay-plot/src/: lib.rs  plot.rs
crates/essay-plot/src/artist/: artist.rs  collection.rs  color.rs  color_data.rs  colorbar.rs  colormap.rs  colormaps.rs  colormesh.rs  container.rs  contour.rs  cycle.rs  holder.rs  lines.rs  markers.rs  mod.rs  patch.rs  path.rs  paths.rs  pcolor.rs  style.rs  text.rs  tricolor.rs  tricontour.rs  triplot.rs
crates/essay-plot/src/axes/: affine.rs  axes.rs  bbox.rs  bounds.rs  mod.rs  rect.rs  spine.rs
crates/essay-plot/src/backend/: backend.rs  gc.rs  mod.rs  renderer.rs
crates/essay-plot/src/contour/: contour.rs  mod.rs  tile.rs  tricontour.rs  tritile.rs
crates/essay-plot/src/device/: backend.rs  device.rs  gc.rs  mod.rs  renderer.rs
crates/essay-plot/src/driver/: backend.rs  device.rs  gc.rs  mod.rs  renderer.rs
crates/essay-plot/src/figure/: affine.rs  axes.rs  bounds.rs  figure.rs  gridspec.rs  mod.rs
crates/essay-plot/src/frame/: affine.rs  artist_id.rs  axes.rs  axis.rs  bounds.rs  data_box.rs  databox.rs  figure.rs  frame.rs  graph.rs  layout.rs  legend.rs  mod.rs  plot_container.rs  tick_locator.rs  typed_plot.rs
crates/essay-plot/src/graph/: axis.rs  bounds.rs  canvas.rs  config.rs  databox.rs  essay-plot.rc  figure.rs  frame.rs  graph.rs  layout.rs  mod.rs  plot.rc  plot.rs  style.rs  tick_formatter.rs  tick_locator.rs
crates/essay-plot/src/macros/: mod.rs
crates/essay-plot/src/plot/: bar.rs  contour.rs  lineplot.rs  mod.rs  pcolormesh.rs  pie.rs  plot.rs  scatter.rs  tricontour.rs  triplot.rs
crates/essay-plot/src/tri/: delaunay.rs  mod.rs  triangulate.rs
crates/essay-tensor/: Cargo.toml
crates/essay-tensor/src/: lib.rs
crates/essay-tensor/src/activation/: mod.rs  relu.rs  softmax.rs  softplus.rs
crates/essay-tensor/src/data/: dataset.rs  flow.rs  mod.rs  range.rs  take.rs  tasks.rs
crates/essay-tensor/src/dataset/: batch.rs  dataset.rs  flow.rs  mod.rs  range.rs  take.rs  tasks.rs  tensor.rs
crates/essay-tensor/src/eval/: backprop.rs  function.rs  graph.rs  mod.rs  trainer.rs  var.rs
crates/essay-tensor/src/expr/: expr.rs  mod.rs  var.rs
crates/essay-tensor/src/flow/: data.rs  dispatch.rs  flow.rs  flow_pool.rs  flow_single.rs  graph.rs  mod.rs  node.rs  pipe.rs  ptr.rs  source.rs  task.rs  thread_pool.rs
crates/essay-tensor/src/function/: backprop.rs  function.rs  gradient.rs  graph.rs  mod.rs  tape.rs  trainer.rs  var.rs
crates/essay-tensor/src/graph/: backprop.rs  bundle.rs  function.rs  graph.rs  mod.rs  tape.rs  trainer.rs  var.rs
crates/essay-tensor/src/init/: fill.rs  initializer.rs  linspace.rs  meshgrid.rs  mod.rs  ones.rs  random_normal.rs  random_uniform.rs  zeros.rs
crates/essay-tensor/src/io/: mod.rs  read_file.rs
crates/essay-tensor/src/layer/: Input.rs  layer.rs  linear.rs  mod.rs  model.rs  sequential.rs
crates/essay-tensor/src/linalg/: blas_naive.rs  matmul.rs  matvec.rs  mod.rs  sgemm.rs  vecmul.rs
crates/essay-tensor/src/loss/: l2_loss.rs  mod.rs
crates/essay-tensor/src/macros/: mod.rs
crates/essay-tensor/src/math/: abs.rs  add.rs  atan2.rs  binary.rs  clamp.rs  cos.rs  div.rs  exp.rs  ln.rs  log.rs  max.rs  min.rs  mod.rs  mul.rs  neg.rs  powf.rs  powi.rs  reduce_max.rs  reduce_mean.rs  reduce_min.rs  reduce_std.rs  reduce_sum.rs  reduce_variance.rs  rem.rs  sin.rs  square.rs  sub.rs  unary.rs
crates/essay-tensor/src/model/: backprop.rs  expr.rs  fit.rs  function.rs  gradient.rs  graph.rs  mod.rs  model.rs  module.rs  program.rs  sequential.rs  tape.rs  tensors.rs  trainer.rs  var.rs
crates/essay-tensor/src/module/: backprop.rs  bundle.rs  graph.rs  mod.rs  module.rs  tape.rs  var.rs
crates/essay-tensor/src/nn/: l2_loss.rs  mod.rs  softmax.rs
crates/essay-tensor/src/ops/: bifold.rs  binary_op.rs  binop.rs  (+8 more)
(+248 files in other folders)
