[package]
name = "essay-ml"
version = "0.1.0"
edition = "2021"
publish=false

[lib]
path = "src/lib.rs"

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.17" }
essay-tensor = { path = "crates/essay-tensor" }
#essay-opencl = { path = "crates/essay-opencl" }
#essay-nn = { path = "crates/essay-nn" }
dfdx = {version ="0.11"}
ndarray = "0.15"
ocl = "0.19"

[workspace]
members = [
    "crates/*",
]

#[workspace.dependencies]
#essay-tensor 

[[bench]]
name = "tensor-add"
harness = false

[[bench]]
name = "open-cl"
harness = false

[[bench]]
name = "dfdx"
harness = false

[[bench]]
name = "ndarray"
harness = false
