[package]
name = "essay-tensor"
version = "0.1.13"
edition = "2021"
publish=false

[lib]
path = "src/lib.rs"

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.17" }
essay-opt = { path = "crates/essay-opt" }
rand = "0.8"
rand_chacha = "0.3"
glob = "0.3"
num-traits = "0.2"
num-complex = "0.4"
rustfft = "6.1"
matrixmultiply = "*"
futures = "0.3"
#tokio = { version="1.28", features = ["full"] }
crossbeam = "0.8"
concurrent-queue = "2.2"

[workspace]
members = [
    "crates/*",
]

#[workspace.dependencies]
#essay-tensor 

[[bench]]
name = "tensor-add"
harness = false
