[package]
name = "essay-plot"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.17" }
essay-tensor = { path = "../essay-tensor" }
egui = "0.22"
eframe = "0.22"
wgpu = "0.16"
wgpu_glyph = "0.20"
winit = "0.28"
pollster = "0.3"
bytemuck = "1.13"

[lib]
doctest = false

#[workspace.dependencies]
#essay-mind = { path="crates/ticker" }
