[package]
name = "essay-tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.17" }
rand = "0.8"
rand_chacha = "0.3"
num-traits = "0.2"
matrixmultiply = "*"
futures = "0.3"
tokio = { version="1.28", features = ["full"] }
crossbeam = "0.8"

[lib]
doctest = false

#[workspace.dependencies]
#essay-mind = { path="crates/ticker" }
